# zen-garden

./: .gitignore  CMakeLists.txt  Creature.cpp  Creature.h  README.md  Screen.cpp  Screen.h  Zen-Garden.sln  main.cpp  zen_garden.sublime-project  zen_garden.sublime-workspace
Sandbox/: Sandbox.vcxproj
Sandbox/src/: Sandbox.cpp
Zen-Garden/: Zen-Garden.vcxproj  Zen-Garden.vcxproj.filters
Zen-Garden/src/: ZenGarden.h
Zen-Garden/src/ZenGarden/: Application.cpp  Application.h  Core.h  Entity.cpp  Entity.h  EntryPoint.h  Math.h  RenderWindow.cpp  RenderWindow.h  Timestepper.cpp  Timestepper.h  Utils.cpp  Utils.h
bin-int/Debug-x64/Sandbox/: Sandbox.exe.recipe  Sandbox.ilk  vc143.idb
bin-int/Debug-x64/Sandbox/Sandbox.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
bin-int/Debug-x64/Zen-Garden/: Zen-Garden.dll.recipe  Zen-Garden.ilk  application.obj.enc  vc143.idb
bin-int/Debug-x64/Zen-Garden/Zen-Garden.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Zen-Garden.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  link.write.2u.tlog
docs/: bibliography.md  cpp_newproject.md  documentation.md
include/: Entity.hpp  Game.hpp  Math.hpp  RenderWindow.hpp  Timestepper.hpp  Utils.hpp
src/: entity.cpp  game.cpp  main.cpp  renderwindow.cpp  timestepper.cpp  utils.cpp
